# voice_feats_extractor

./: LICENSE  README.md  pyproject.toml
conf/: default_config.yaml  ita_zun_emotion_normal.yaml  ita_zun_recitation.yaml  jsut_basic5000.yaml
scripts/: extractor.py
voice_feats_extractor/: constants.py  label.py  wave.py
voice_feats_extractor/configs/: preprocess.py
voice_feats_extractor/modules/tacotron2/: audio_processing.py  layers.py  stft.py
voice_feats_extractor/utils/: pad.py
