[tool.poetry]
name = "voice_feats_extractor"
version = "0.1.0"
description = ""
authors = ["tkser <tkser.edu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tqdm = "^4.66.1"
numpy = "^1.26.2"
omegaconf = "^2.3.0"
torch = "^2.1.1"
pyworld = "^0.3.4"
pyopenjtalk = "^0.3.3"
librosa = "^0.10.1"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.ruff]
target-version = "py310"
line-length = 120
ignore = [
    "G004",
    "N812",
    "RUF001",
    "RUF002",
    "RUF003",
    "RET504",
    "ANN101",
    "ANN102",
    "ANN002",
    "ANN003",
    "INP001",
    "PLR0913",
    "PLR2004",
    "FBT001",
    "FBT002",
    "NPY002",
    "SIM105",
    "NPY002",
    "S110",
    "D"
]
select = [
    "ALL"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-returns = 15
max-statements = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
